# optee-apps

./: .gitignore  README.md
aes/: CMakeLists.txt
aes/host/: Makefile  clear.txt  main.c
cache_benchmark/: CMakeLists.txt
cache_benchmark/cache/: a.out
cache_benchmark/host/: Makefile  main.c
cache_benchmark/ta/: Makefile  cache_benchmarking_ta.c  sub.mk  user_ta_header_defines.h
hello_world/: CMakeLists.txt
hello_world/host/: Makefile  main.c
hello_world/ta/: hello_world_ta.c
hot_cache/: CMakeLists.txt  je.txt  tmp.txt
hot_cache/cache/: cache.c  lru_cache.c
hot_cache/client/: client
hot_cache/host/: Makefile  main.c
hot_cache/ta/: Makefile  hot_cache_ta.c  sub.mk  user_ta_header_defines.h
hot_cache/ta/include/: hot_cache_ta.h
read_key/: CMakeLists.txt  README.md
read_key/host/: Makefile  main.c
read_key/ta/: Makefile  read_key_ta.c  sub.mk  user_ta_header_defines.h
save_key/: CMakeLists.txt  README.md
save_key/host/: Makefile  main.c
save_key/ta/: save_key_ta.c  sub.mk  user_ta_header_defines.h
secure_storage/: CMakeLists.txt
secure_storage/host/: Makefile  main.c
socket-benchmark/: tmp_results.txt
socket-benchmark/host/: ;  Makefile  main.c  socket_benchmark_server.c
socket-benchmark/ta/: Makefile  socket_benchmark_ta.c  sub.mk  (+1 more)
socket-throughput/: CMakeLists.txt  results.txt
socket_benchmark/: CMakeLists.txt  client.c
socket_benchmark/ext/: a.out
socket_benchmark/ta/: sub.mk  tcp_server_ta.c
tcp2ext/: CMakeLists.txt
tcp_server/: CMakeLists.txt
threaded-socket/: CMakeLists.txt  tmp_results.txt
(+47 files in other folders)
